Started implementing LoopAnalysis.java